Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.6.0 Beta
-
Fix Version/s: 5.6.0 RC
-
Component/s: Documentation
-
Labels:None
-
Environment:Windows, any
-
Commits:a6a665bdb147d0a0fbfcd65053718a54e1d9815b (qttools/5.6, 28.1.2016, 5.6)
Description
See screenshot obtained on
# 0 "\\.\DISPLAY1" Depth: 32 Primary: yes
Geometry: 3840x2160+0+0 Available: 3840x2070+0+0
Virtual geometry: 5760x2160+0+0 Available: 5760x2070+0+0
2 virtual siblings
Physical size: 527x296 mm Refresh: 29 Hz Power state: 0
Physical DPI: 185.078,185.351 Logical DPI: 216,216
DevicePixelRatio: 1 Pixel density: 2
Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
This is showing assistant without any High DPI auto scaling activated. It shows up now since previously QtWebKit always faked 96DPI which QTExtBrowser no longer does (so it is a regression of sorts). It does not show in Qt Creator since that sets Qt::AA_EnableHighDpiScaling (which could/should be done as a work around for Assistant as well).
At any event, the font sizes in the style sheets should be adapted to Points.
Attachments
Issue Links
- relates to
-
QTBUG-41076 Documentation shown in assistant/webkit has hard-coded font size and is thus too small on High DPI displays
-
- Closed
-
-
QTBUG-51917 Assistant: icons are scaled and font size is too small
-
- Reported
-
- resulted in
-
QTBUG-52318 Linux: Qt 5.6: Qt Assistant UI scaled incorrectly
-
- Closed
-