Qt Assistant: Set Qt::AA_EnableHighDpiScaling.

Enable automatic scaling for the documentation on High DPI screens.

Task-number: QTBUG-50698
Change-Id: I155ff2309efa518aad5ca618a9abeac96ea57d4f
Reviewed-by: Topi Reiniö <topi.reinio@theqtcompany.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>